# aigeology-kit

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: make_basic_features_8_scaleaware.md
review/: classwise_feature_distribution.py  feature_distribution_inspector.py  make_basic_features_10_scaleaware.py  rf_geomorph_toolkit.py
scripts/: Grid_Plane_with_Bar.py  batch_rename_cleaner.py  bbox_from_csv_interactive.py  change_dem_resolution.py  classwise_feature_distribution.py  clip_all_tifs_same_extent_interactive.py  convert_gpkg_parquet_csv_interactive.py  count_labels_with_guide.py  feature_distribution_inspector.py  geodata_search_edit.py  make_basic_features_10_evans.py  make_basic_features_10_largekern.py  make_basic_features_10_scaleaware.py  make_basic_features_11_wood.py  make_basic_features_8.py  make_basic_features_8_scaleaware.py  make_features_RSandSM_export_points.py  make_slope_diagram.py  make_slope_diagram_9x9.py  point_class_to_grid_ABC.py  point_class_to_vector_grid_ABC.py  preview_and_export_parquet_gpkg.py  rf_eval_plotter.py  rf_explain_export.py  rf_geomorph_interactive.py  rf_geomorph_toolkit.py  rf_geomorph_toolkit_batch.py  rf_geomorph_toolkit_train.py  rf_geomorph_toolkit_trainbatch.py
src/aigeology_kit/: __init__.py
tests/data/: TEST1mDEM1k_epsg6673.tif
